fix: silent-skip ERROR_DURING_ATTACH rows in overview (Phase 2 cleanup)
Revert the SELF_PID pre-filter from dd2941d. Instead, let attach() succeed
or fail naturally: if self-attach fails (allowAttachSelf=false, JDK 21 default),
VMInfo gets ERROR_DURING_ATTACH state and VMOverviewView now silently excludes
that row — no error message printed. If -Djdk.attach.allowAttachSelf=true, the
attach succeeds and jvmtop appears in its own overview normally.

Verified:
  (1) default: jvmtop absent from overview, no error text
  (2) allowAttachSelf=true: jvmtop shown as a normal row

Decision recorded in docs/PHASE0_ANALYSIS.md section 8.